fix: Stop menu from being covered

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,3 +4,15 @@
 /* Based on GH Pages minima v2.5.1 README. The newer minima handles custom styling differently.*/
 
 @import "minima";
+
+/**
+ * Shift menu on mobile when covered by GitHub corner.
+ * Also force it to be absolute so that is has an effect.
+ * This is also smoother using 900 rather than 800 or 800.
+ */
+@media screen and (max-width: 900px) {
+    .site-nav {
+        position: absolute;
+        right: 90px;
+    }
+}
